@@ -56,6 +56,7 @@ Tactics
 - The "with" arguments are now typed using informations from the current goal:
   allows support for coercions and more inference of implicit arguments.
 - Application of "f_equal"-style lemmas works better.
+- New intro pattern "@A", which genererates a fresh name based on A.
 
 Miscellaneous
 
